--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+Jinja2 >=2.9
+contourpy >=1
+packaging >=16.8
+pillow >=7.1.0
+PyYAML >=3.10
+tornado >=5.1
+xyzservices >=2021.09.1
 bokeh
 streamlit_bokeh_events
 ffmpeg
